--- a/index.html
+++ b/index.html
@@ -70,39 +70,39 @@
           </tr>
 
           <tr>
-            <td data-label="team"></td>
-            <td data-label="wins"></td>
-            <td data-label="losses"></td>
-            <td data-label="pct"></td>
-            <td data-label="games back"></td>
-            <td data-label="wildcard behind"></td>
-            <td data-label="last 10"></td>
-            <td data-label="streak"></td>
-            <td data-label="runs scored"></td>
-            <td data-label="runs against"></td>
-            <td data-label="difference"></td>
-            <td data-label="expected w/l"></td>
-            <td data-label="home"></td>
-            <td data-label="away"></td>
-            <td data-label="against top half"></td>
+            <td data-label="team">Boston Red Sox</td>
+            <td data-label="wins">19</td>
+            <td data-label="losses">18</td>
+            <td data-label="pct">.514</td>
+            <td data-label="games back">5.5</td>
+            <td data-label="wildcard behind">3.0</td>
+            <td data-label="last 10">5-5</td>
+            <td data-label="streak">L2</td>
+            <td data-label="runs scored">164</td>
+            <td data-label="runs against">130</td>
+            <td data-label="difference">+34</td>
+            <td data-label="expected w/l">22-15</td>
+            <td data-label="home">7-9</td>
+            <td data-label="away">12-9</td>
+            <td data-label="against top half">7-15</td>
           </tr>
 
           <tr>
-            <td data-label="team"></td>
-            <td data-label="wins"></td>
-            <td data-label="losses"></td>
-            <td data-label="pct"></td>
-            <td data-label="games back"></td>
-            <td data-label="wildcard behind"></td>
-            <td data-label="last 10"></td>
-            <td data-label="streak"></td>
-            <td data-label="runs scored"></td>
-            <td data-label="runs against"></td>
-            <td data-label="difference"></td>
-            <td data-label="expected w/l"></td>
-            <td data-label="home"></td>
-            <td data-label="away"></td>
-            <td data-label="against top half"></td>
+            <td data-label="team">Tampa Bay Rays</td>
+            <td data-label="wins">19</td>
+            <td data-label="losses">19</td>
+            <td data-label="pct">.500</td>
+            <td data-label="games back">6.0</td>
+            <td data-label="wildcard behind">3.5</td>
+            <td data-label="last 10">6-4</td>
+            <td data-label="streak">L1</td>
+            <td data-label="runs scored">154</td>
+            <td data-label="runs against">185</td>
+            <td data-label="difference">-31</td>
+            <td data-label="expected w/l">16-22</td>
+            <td data-label="home">13-10</td>
+            <td data-label="away">6-9</td>
+            <td data-label="against top half">7-8</td>
           </tr>
         </tbody>
       </table>
