--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="wrapper">
       <table>
+        <caption>Major League Baseball Standings</caption>
         <thead>
           <tr>
             <th>AL EAST</th>
@@ -26,10 +27,10 @@
             <th>RS</th>
             <th>RA</th>
             <th>DIFF</th>
-            <th>X-W/L</th>
+            <!-- <th>X-W/L</th> -->
             <th>HOME</th>
             <th>AWAY</th>
-            <th>>.500</th>
+            <!-- <th>>.500</th> -->
           </tr>
         </thead>
         <tbody>
@@ -45,10 +46,10 @@
             <td data-label="runs scored">187</td>
             <td data-label="runs against">134</td>
             <td data-label="difference">+53</td>
-            <td data-label="expected w/l">23-13</td>
+            <!-- <td data-label="expected w/l">23-13</td> -->
             <td data-label="home">12-7</td>
             <td data-label="away">12-5</td>
-            <td data-label="against top half">15-6</td>
+            <!-- <td data-label="against top half">15-6</td> -->
           </tr>
 
           <tr>
@@ -63,10 +64,10 @@
             <td data-label="runs scored">188</td>
             <td data-label="runs against">135</td>
             <td data-label="difference">+53</td>
-            <td data-label="expected w/l">25-14</td>
+            <!-- <td data-label="expected w/l">25-14</td> -->
             <td data-label="home">13-6</td>
             <td data-label="away">12-8</td>
-            <td data-label="against top half">10-6</td>
+            <!-- <td data-label="against top half">10-6</td> -->
           </tr>
 
           <tr>
@@ -81,10 +82,10 @@
             <td data-label="runs scored">164</td>
             <td data-label="runs against">130</td>
             <td data-label="difference">+34</td>
-            <td data-label="expected w/l">22-15</td>
+            <!-- <td data-label="expected w/l">22-15</td> -->
             <td data-label="home">7-9</td>
             <td data-label="away">12-9</td>
-            <td data-label="against top half">7-15</td>
+            <!-- <td data-label="against top half">7-15</td> -->
           </tr>
 
           <tr>
@@ -99,10 +100,10 @@
             <td data-label="runs scored">154</td>
             <td data-label="runs against">185</td>
             <td data-label="difference">-31</td>
-            <td data-label="expected w/l">16-22</td>
+            <!-- <td data-label="expected w/l">16-22</td> -->
             <td data-label="home">13-10</td>
             <td data-label="away">6-9</td>
-            <td data-label="against top half">7-8</td>
+            <!-- <td data-label="against top half">7-8</td> -->
           </tr>
         </tbody>
       </table>
