--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
             <td data-label="streak">W1</td>
             <td data-label="runs scored">187</td>
             <td data-label="runs against">134</td>
-            <td data-label="difference">+53</td>
+            <td
+              data-label="difference"
+              class="positive">
+              +53
+            </td>
             <!-- <td data-label="expected w/l">23-13</td> -->
             <td data-label="home">12-7</td>
             <td data-label="away">12-5</td>
@@ -62,7 +66,11 @@
             <td data-label="streak">L1</td>
             <td data-label="runs scored">188</td>
             <td data-label="runs against">135</td>
-            <td data-label="difference">+53</td>
+            <td
+              data-label="difference"
+              class="positive">
+              +53
+            </td>
             <!-- <td data-label="expected w/l">25-14</td> -->
             <td data-label="home">13-6</td>
             <td data-label="away">12-8</td>
@@ -79,7 +87,11 @@
             <td data-label="streak">L2</td>
             <td data-label="runs scored">164</td>
             <td data-label="runs against">130</td>
-            <td data-label="difference">+34</td>
+            <td
+              data-label="difference"
+              class="positive">
+              +34
+            </td>
             <!-- <td data-label="expected w/l">22-15</td> -->
             <td data-label="home">7-9</td>
             <td data-label="away">12-9</td>
@@ -96,7 +108,11 @@
             <td data-label="streak">L1</td>
             <td data-label="runs scored">154</td>
             <td data-label="runs against">185</td>
-            <td data-label="difference">-31</td>
+            <td
+              data-label="difference"
+              class="negative">
+              -31
+            </td>
             <!-- <td data-label="expected w/l">16-22</td> -->
             <td data-label="home">13-10</td>
             <td data-label="away">6-9</td>
